--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.5.5"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.1"
   }
 }
